--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@ant-design/pro-table": "^2.17.0",
     "@umijs/route-utils": "^1.0.33",
     "antd": "^4.15.0",
+    "braft-editor": "^2.3.9",
     "classnames": "^2.2.6",
     "echarts": "^5.1.1",
     "lodash": "^4.17.11",
